# llm-by-example

./: README.md
agents/agent_example/: Cargo.toml  Dockerfile  docker-compose.yaml
agents/agent_example/src/: main.rs
chains/secuantial_chain/: Cargo.toml  Dockerfile  README.md  docker-compose.yaml
chains/secuantial_chain/src/: main.rs
chains/simple_chain/: Cargo.toml  Dockerfile  README.md  docker-compose.yaml
chains/simple_chain/src/: main.rs
chains/sql_chain/: Cargo.toml  Dockerfile  docker-compose.yaml
chains/sql_chain/migrations/: 001_up.sql
chains/sql_chain/src/: main.rs
dynamic_semantic_routes/: Cargo.toml
dynamic_semantic_routes/src/: main.rs
embeddings/: Cargo.toml  Dockerfile  README.md  docker-compose.yaml
embeddings/src/: main.rs
semantic_routes/: Cargo.toml
semantic_routes/src/: main.rs
