[package]
name = "embeddings"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
langchain-rust = { version = "2.3.0", features = ["postgres"] }
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1.71"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
futures ="0.3"
log = "0.4.19"
reqwest-eventsource = "0.5.0"
async-openai = "0.18.3"
mockito = "1.3.0"
tiktoken-rs = "0.5.8"
sqlx = { version = "0.7.3", features = ["postgres", "runtime-tokio-native-tls", "json", "uuid" ], optional = true }
uuid = {version = "1.7.0", features = ["v4"], optional = true }
pgvector = {version = "0.3.2", features = ["postgres", "sqlx"], optional = true }
text-splitter = { version = "0.7", features = ["tiktoken-rs","markdown"] }


[features]
default = []
postgres = ["pgvector", "sqlx", "uuid"]

[dev-dependencies]
tokio-test = "0.4.0"
testcontainers = "0.11"
