[package]
name = "embeddings"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
langchain-rust = { version = "3.2.1", features = ["postgres"] }
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1.71"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
futures ="0.3"
log = "0.4.19"
mockito = "1.3.0"
pgvector = {version = "0.3.2", features = ["postgres", "sqlx"], optional = true }
